--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,14 @@
     top: 10px;
     right: 15px;
 }
+
+.info-message{
+    opacity: 0;
+    transition: 0.5s ease;
+    pointer-events: none;
+}
+
+.alert-show{
+    opacity: 1;
+    pointer-events: all;
+}
